Major UI Update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SL2 Calculator</title>
+    <meta name="theme-color" content="#0f172a">
+    <title>SL2 Calculator - Sigrogana Legend 2 Character Builder</title>
+    <meta name="description" content="Advanced character calculator for Sigrogana Legend 2 - Build and optimize your character stats, weapons, and armor">
+    
+    <!-- Google Fonts - Similar to portfolio's custom fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div>
